# simudep

./: .gitignore  PLAN.md  README.md  memo.txt  package.json
training/: pyproject.toml
training/src/simudep/cli/: __main__.py
training/src/simudep/evo/: ga.py
training/src/simudep/genome/: builtin.py  canonical.py  crossover.py  mutation.py  random_init.py  types.py
training/src/simudep/io/: genome_json.py  run_writer.py
training/src/simudep/mjcf/: builder.py
training/src/simudep/sim/: grouping.py  rollout.py  rollout_mjx.py
training/tests/: test_canonical.py  test_crossover.py  test_ga.py  test_genome_json.py  test_grouping.py  test_mjcf_builder.py  test_mutation.py  test_random_init.py  test_rollout.py  test_rollout_mjx.py  test_smoke.py
viz/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
viz/src/: main.js  main.ts
viz/src/io/: loadRun.js  loadRun.ts  types.js  types.ts
viz/src/scene/: Animator.js  Animator.ts  CreatureBuilder.js  CreatureBuilder.ts
