[project]
name = "simudep"
version = "0.1.0"
description = "Evolutionary creature simulator (training side, MuJoCo MJX + GA/CMA-ES)"
readme = "README.md"
authors = [
    { name = "jolivem", email = "jolivet.michel@free.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "cma>=4.4.4",
    "jax[cuda12]>=0.10.0",
    "mujoco>=3.8.0",
    "mujoco-mjx>=3.8.0",
    "numpy>=2.4.4",
]

[project.scripts]
simudep = "simudep.cli.__main__:main"

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
